name:                alternators
version:             1.0.0.0
synopsis:            Handy functions when using transformers
description:         Please see README.md
homepage:            https://github.com/louispan/alternators#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:
                       Control.Monad.Delegate
                       Control.Monad.Delegate.Class
                       Control.Monad.Trans.ACont
                      --  Control.Monad.Trans.AMaybe
                       Control.Monad.Trans.AReader
                       Control.Monad.Trans.ARWS.Strict
                       Control.Monad.Trans.ARWS.Lazy
                       Control.Monad.Trans.AState.Lazy
                       Control.Monad.Trans.AState.Strict
                       Control.Monad.Trans.Maybe.Extras
  build-depends:       base >= 4.7 && < 5
                     , mmorph >= 1
                     , mtl >= 2
                     , stm >= 2.4.4.1
                     , newtype-generics >= 0.5.2.1
                     , transformers >= 0.4
                     , lens >= 4
  ghc-options:         -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/alternators
