name:                alternators
version:             2.0.0.0
synopsis:            Handy functions when using transformers.
description:         Useful monads built on top of transformers. Please see README.md
homepage:            https://github.com/louispan/alternators#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2017 Louis Pan
category:            Control
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
Tested-With:         GHC == 8.4.1

library
  hs-source-dirs:      src
  exposed-modules:
                       Control.Also
                       Control.Monad.Bind
                       Control.Monad.Delegate
                       Control.Monad.Context
                       Control.Monad.Observer
                       Control.Monad.Trans.Extras
                       Data.Function.Extras
                       Data.IORef.Extras
                       Data.Kind.Extras
                       Data.Tagged.Extras
                       Data.AnyStableName
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6
                     , deepseq >= 1.4
                     , dlist >= 0.8
                     , hashable >= 1.2
                     , mmorph >= 1
                     , mtl >= 2
                     , stm >= 2.4
                     , newtype-generics >= 0.5
                     , tagged >= 0.8
                     , transformers >= 0.4
  ghc-options:         -Wall -Wredundant-constraints
  default-language:    Haskell2010

test-suite glazier-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , alternators >= 2.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/alternators
