cabal-version:       2.2
name:                alternators
version:             2.0.0.0
synopsis:            Handy functions when using transformers.
description:         Useful monads built on top of transformers. Please see README.md
homepage:            https://github.com/louispan/alternators#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2019 Louis Pan
category:            Control
stability:           experimental
build-type:          Simple
extra-source-files:  README.md
Tested-With:         GHC == 8.6.5

library
  hs-source-dirs:      src
  exposed-modules:
                       Control.Also
                       Control.Monad.Delegate
                       Control.Monad.Environ
                       Control.Monad.Observer
                       Control.Monad.Trans.Extras
                       Data.Function.Extras
                       Data.IORef.Extras
                       Data.Kind.Extras
                       Data.Tagged.Extras
                       System.Mem.AnyStableName
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.6
                     , deepseq >= 1.4
                     , dlist >= 0.8
                     , hashable >= 1.2
                     , mmorph >= 1
                     , mtl >= 2
                     , stm >= 2.4
                     , newtype-generics >= 0.5
                     , tagged >= 0.8
                     , transformers >= 0.4
  ghc-options:         -Wall -Wredundant-constraints
  default-language:    Haskell2010

test-suite glazier-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , alternators >= 2.0
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/alternators
